unpackaged/main/default/objects/TrainingBooking__c/TrainingBooking__c.object-meta.xml
<CustomObject>
    <label>Training Booking</label>
    <nameField>
        <displayFormat>TC{0000}</displayFormat>
        <label>Training Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>