unpackaged/main/default/objects/TrainingBooking__c/fields/AccountLookup__c.field-meta.xml
<CustomField>
    <fullName>AccountLookup__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Training Bookings</relationshipLabel>
    <relationshipName>Training_Bookings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>