unpackaged/main/default/objects/TrainingBooking__c/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <formula>HYPERLINK("/mail/mmchoose.jsp?id=" &amp; Id &amp; "&amp;retURL=%2F" &amp; TrainingCourse__c , "Mail Merge")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actions</label>
    <type>Text</type>
</CustomField>