unpackaged/main/default/objects/TrainingBooking__c/fields/Applicable_to_my_Workv2__c.field-meta.xml
<CustomField>
    <fullName>Applicable_to_my_Workv2__c</fullName>
    <formula>VALUE(Text( Course_Applicable_to_my_Work__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicable to my Work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>