unpackaged/main/default/objects/TrainingBooking__c/fields/CertificatesIssued__c.field-meta.xml
<CustomField>
    <fullName>CertificatesIssued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificates Issued</label>
    <type>Checkbox</type>
</CustomField>