unpackaged/main/default/objects/TrainingBooking__c/fields/Confidence_has_grownv2__c.field-meta.xml
<CustomField>
    <fullName>Confidence_has_grownv2__c</fullName>
    <formula>Value(TEXT(Effectiveness_Confidence_has_Grown__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confidence has grown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>