unpackaged/main/default/objects/TrainingBooking__c/fields/ConfirmationEmail__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation Email</label>
    <type>Checkbox</type>
</CustomField>