unpackaged/main/default/objects/TrainingBooking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Bookings</relationshipLabel>
    <relationshipName>TrainingBookings</relationshipName>
    <type>Lookup</type>
</CustomField>