unpackaged/main/default/objects/TrainingBooking__c/fields/ContactAccount__c.field-meta.xml
<CustomField>
    <fullName>ContactAccount__c</fullName>
    <formula>HYPERLINK("/"+Contact__r.Id,FullName__c)  + ", " + Account__c</formula>
    <label>Contact</label>
    <type>Text</type>
</CustomField>