unpackaged/main/default/objects/TrainingBooking__c/fields/Course_Applicable_to_my_Work__c.field-meta.xml
<CustomField>
    <fullName>Course_Applicable_to_my_Work__c</fullName>
    <inlineHelpText>Was the training applicable to my role?</inlineHelpText>
    <label>Course: Applicable to my Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>