unpackaged/main/default/objects/TrainingBooking__c/fields/Course_Division__c.field-meta.xml
<CustomField>
    <fullName>Course_Division__c</fullName>
    <formula>TrainingCourse__r.Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Division</label>
    <type>Text</type>
</CustomField>