unpackaged/main/default/objects/TrainingBooking__c/fields/Course_Duration_Suitable_for_Subject__c.field-meta.xml
<CustomField>
    <fullName>Course_Duration_Suitable_for_Subject__c</fullName>
    <inlineHelpText>Was the course duration suitable for the material covered?</inlineHelpText>
    <label>Course: Duration Suitable for Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>