unpackaged/main/default/objects/TrainingBooking__c/fields/Course_Environment_Conducive_to_Study__c.field-meta.xml
<CustomField>
    <fullName>Course_Environment_Conducive_to_Study__c</fullName>
    <inlineHelpText>Was the training environment conducive to learning?</inlineHelpText>
    <label>Course: Environment Conducive to Study</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>