unpackaged/main/default/objects/TrainingBooking__c/fields/Course_Materials_Useful_for_my_Role__c.field-meta.xml
<CustomField>
    <fullName>Course_Materials_Useful_for_my_Role__c</fullName>
    <inlineHelpText>Will the course materials be useful in your role?</inlineHelpText>
    <label>Course: Materials Useful for my Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>