unpackaged/main/default/objects/TrainingBooking__c/fields/Course_Pace_of_Delivery_Satisfacatory__c.field-meta.xml
<CustomField>
    <fullName>Course_Pace_of_Delivery_Satisfacatory__c</fullName>
    <inlineHelpText>Was the pace of the training and delivery satisfactory?</inlineHelpText>
    <label>Course: Pace of Delivery Satisfacatory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>