unpackaged/main/default/objects/TrainingBooking__c/fields/Course_Places_Booked__c.field-meta.xml
<CustomField>
    <fullName>Course_Places_Booked__c</fullName>
    <formula>TrainingCourse__r.PlacesBooked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Places Booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>