unpackaged/main/default/objects/TrainingBooking__c/fields/Course_Quality_Detail_Appropriate__c.field-meta.xml
<CustomField>
    <fullName>Course_Quality_Detail_Appropriate__c</fullName>
    <inlineHelpText>Were the quality and level of detail of the course materials appropriate?</inlineHelpText>
    <label>Course: Quality &amp; Detail Appropriate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>