unpackaged/main/default/objects/TrainingBooking__c/fields/Course_Software_Hardware_Satisfactory__c.field-meta.xml
<CustomField>
    <fullName>Course_Software_Hardware_Satisfactory__c</fullName>
    <inlineHelpText>Were the software and hardware used in the course performing satisfactory?</inlineHelpText>
    <label>Course: Software &amp; Hardware Satisfactory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>