unpackaged/main/default/objects/TrainingBooking__c/fields/Course_Well_Balanced_Methods__c.field-meta.xml
<CustomField>
    <fullName>Course_Well_Balanced_Methods__c</fullName>
    <inlineHelpText>Were the mix of theory, demonstrations and practice sessions / exercises in the course well balanced?</inlineHelpText>
    <label>Course: Well Balanced Methods</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>