unpackaged/main/default/objects/TrainingBooking__c/fields/Course_Well_Structured__c.field-meta.xml
<CustomField>
    <fullName>Course_Well_Structured__c</fullName>
    <inlineHelpText>Was the course well structured?</inlineHelpText>
    <label>Course: Well Structured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>