unpackaged/main/default/objects/TrainingBooking__c/fields/CSAT_Comments__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Comments__c</fullName>
    <label>CSAT Comments</label>
    <type>TextArea</type>
</CustomField>