unpackaged/main/default/objects/TrainingBooking__c/fields/CSAT_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Completed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSAT: Completed by:</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>