unpackaged/main/default/objects/TrainingBooking__c/fields/CSAT_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Completed_Date__c</fullName>
    <label>CSAT Completed Date:</label>
    <type>Date</type>
</CustomField>