unpackaged/main/default/objects/TrainingBooking__c/fields/Duration_Suitable_for_Subjectv2__c.field-meta.xml
<CustomField>
    <fullName>Duration_Suitable_for_Subjectv2__c</fullName>
    <formula>VALUE(Text( Course_Duration_Suitable_for_Subject__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Suitable for Subject</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>