unpackaged/main/default/objects/TrainingBooking__c/fields/Effectiveness_Confidence_has_Grown__c.field-meta.xml
<CustomField>
    <fullName>Effectiveness_Confidence_has_Grown__c</fullName>
    <inlineHelpText>My confidence in using the skills gained through the week has increased?</inlineHelpText>
    <label>Effectiveness: Confidence has Grown</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>