unpackaged/main/default/objects/TrainingBooking__c/fields/Effectiveness_Performance_will_Improve__c.field-meta.xml
<CustomField>
    <fullName>Effectiveness_Performance_will_Improve__c</fullName>
    <inlineHelpText>My job performance will improve as a result of the training course</inlineHelpText>
    <label>Effectiveness: Performance will Improve</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>