unpackaged/main/default/objects/TrainingBooking__c/fields/Effectiveness_Productivity_Increase__c.field-meta.xml
<CustomField>
    <fullName>Effectiveness_Productivity_Increase__c</fullName>
    <inlineHelpText>My productivity in work will now increase as a result of the training course?</inlineHelpText>
    <label>Effectiveness: Productivity Increase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>