unpackaged/main/default/objects/TrainingBooking__c/fields/Engaging_on_Subjectv2__c.field-meta.xml
<CustomField>
    <fullName>Engaging_on_Subjectv2__c</fullName>
    <formula>VALUE(Text( Instructor_Engaging_on_Subject__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engaging on Subject</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>