unpackaged/main/default/objects/TrainingBooking__c/fields/Environment_Conducive_to_Studyv2__c.field-meta.xml
<CustomField>
    <fullName>Environment_Conducive_to_Studyv2__c</fullName>
    <formula>VALUE(Text( Course_Environment_Conducive_to_Study__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Environment Conducive to Study</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>