unpackaged/main/default/objects/TrainingBooking__c/fields/Facilities_Room_Layout__c.field-meta.xml
<CustomField>
    <fullName>Facilities_Room_Layout__c</fullName>
    <inlineHelpText>How was the standard of the room layout? (seating arrangement, visibility of screens)</inlineHelpText>
    <label>Facilities: Room Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>