unpackaged/main/default/objects/TrainingBooking__c/fields/Facilities_Standard_of_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Facilities_Standard_of_Equipment__c</fullName>
    <inlineHelpText>How was the standard of the equipment used?</inlineHelpText>
    <label>Facilities: Standard of Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>