unpackaged/main/default/objects/TrainingBooking__c/fields/Facilities_Training_Environment__c.field-meta.xml
<CustomField>
    <fullName>Facilities_Training_Environment__c</fullName>
    <inlineHelpText>How was the training environment? (temperature, cleanliness of rooms)</inlineHelpText>
    <label>Facilities: Training Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>