unpackaged/main/default/objects/TrainingBooking__c/fields/FinishDate__c.field-meta.xml
<CustomField>
    <fullName>FinishDate__c</fullName>
    <formula>TrainingCourse__r.FinishDate__c</formula>
    <label>Finish Date</label>
    <type>Date</type>
</CustomField>