unpackaged/main/default/objects/TrainingBooking__c/fields/FormattedDate__c.field-meta.xml
<CustomField>
    <fullName>FormattedDate__c</fullName>
    <formula>IF(StartDate__c != FinishDate__c,
TEXT(DAY(StartDate__c)) &amp; CASE(DAY(StartDate__c),1,"st",2,"nd",3,"rd",21,"st",22,"nd",23,"rd",31,"st","th") &amp; " "
&amp; IF(DAY(StartDate__c)&gt;DAY(FinishDate__c),CASE(MONTH(StartDate__c),
  1, "January",
  2, "February",
  3, "March",
  4, "April",
  5, "May",
  6, "June",
  7, "July",
  8, "August",
  9, "September",
  10, "October",
  11, "November",
  12, "December",
"") &amp; " ","")
&amp; "to ", "" )
&amp; TEXT(DAY(FinishDate__c)) &amp; CASE(DAY(FinishDate__c),1,"st",2,"nd",3,"rd",21,"st",22,"nd",23,"rd",31,"st","th") &amp; " "
&amp; CASE(MONTH(FinishDate__c),
  1, "January",
  2, "February",
  3, "March",
  4, "April",
  5, "May",
  6, "June",
  7, "July",
  8, "August",
  9, "September",
  10, "October",
  11, "November",
  12, "December",
"") &amp; " "
&amp; TEXT(YEAR(FinishDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Date</label>
    <type>Text</type>
</CustomField>