unpackaged/main/default/objects/TrainingBooking__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <formula>Contact__r.FirstName &amp; " " &amp; Contact__r.LastName</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>