unpackaged/main/default/objects/TrainingBooking__c/fields/How_challenging_was_the_trainingv2__c.field-meta.xml
<CustomField>
    <fullName>How_challenging_was_the_trainingv2__c</fullName>
    <formula>VALUE(Text( How_challenging_was_the_training__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How challenging was the training</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>