unpackaged/main/default/objects/TrainingBooking__c/fields/How_did_you_hear_of_majenta__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_of_majenta__c</fullName>
    <label>How did you hear of majenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Google (search)</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>JLR</fullName>
            </value>
            <value>
                <fullName>FORD</fullName>
            </value>
            <value>
                <fullName>NISSAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>