unpackaged/main/default/objects/TrainingBooking__c/fields/Instructor_language__c.field-meta.xml
<CustomField>
    <fullName>Instructor_language__c</fullName>
    <inlineHelpText>How did you feel about the language the instructor was using (jargon)?</inlineHelpText>
    <label>Instructor language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too technical</fullName>
            </value>
            <value>
                <fullName>Too basic</fullName>
            </value>
            <value>
                <fullName>Good balance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>