unpackaged/main/default/objects/TrainingBooking__c/fields/Instructor_Prepared_Organised__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Prepared_Organised__c</fullName>
    <inlineHelpText>Was the instructor prepared and organised?</inlineHelpText>
    <label>Instructor: Prepared &amp; Organised</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>