unpackaged/main/default/objects/TrainingBooking__c/fields/Instructor_Receptive_to_Questions__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Receptive_to_Questions__c</fullName>
    <inlineHelpText>Was the instructor responsive to students training needs / questions?</inlineHelpText>
    <label>Instructor: Receptive to Questions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>