unpackaged/main/default/objects/TrainingBooking__c/fields/Instructor_Varied_Methods_Used__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Varied_Methods_Used__c</fullName>
    <label>Instructor: Varied Methods Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>