unpackaged/main/default/objects/TrainingBooking__c/fields/Knowledgeable_on_subjectv2__c.field-meta.xml
<CustomField>
    <fullName>Knowledgeable_on_subjectv2__c</fullName>
    <formula>VALUE(TEXT(Instructor_Knowledgable_on_Subject__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Knowledgeable on subject</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>