unpackaged/main/default/objects/TrainingBooking__c/fields/Learn_More_About_CATIA_Certification__c.field-meta.xml
<CustomField>
    <fullName>Learn_More_About_CATIA_Certification__c</fullName>
    <label>Learn More About CATIA Certification?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>