unpackaged/main/default/objects/TrainingBooking__c/fields/Learning_objectives_clear__c.field-meta.xml
<CustomField>
    <fullName>Learning_objectives_clear__c</fullName>
    <inlineHelpText>In your opinion, were the learning objectives stated clearly at the start of the course/session?</inlineHelpText>
    <label>Learning objectives clear</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>