unpackaged/main/default/objects/TrainingBooking__c/fields/Length_of_training__c.field-meta.xml
<CustomField>
    <fullName>Length_of_training__c</fullName>
    <inlineHelpText>What did you think of the length of the training session?</inlineHelpText>
    <label>Length of training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too short</fullName>
            </value>
            <value>
                <fullName>Ideal length</fullName>
            </value>
            <value>
                <fullName>Too long</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>