unpackaged/main/default/objects/TrainingBooking__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>TEXT(TrainingCourse__r.Location__c)</formula>
    <label>Location</label>
    <type>Text</type>
</CustomField>