unpackaged/main/default/objects/TrainingBooking__c/fields/ManualsOrdered__c.field-meta.xml
<CustomField>
    <fullName>ManualsOrdered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manuals Ordered</label>
    <type>Checkbox</type>
</CustomField>