unpackaged/main/default/objects/TrainingBooking__c/fields/Materials_Useful_for_my_Workv2__c.field-meta.xml
<CustomField>
    <fullName>Materials_Useful_for_my_Workv2__c</fullName>
    <formula>VALUE(Text( Course_Materials_Useful_for_my_Role__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Materials Useful for my Work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>